<resources>
    <string name="app_name">App Portfolio</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="stock_hawk">Stock Hawk</string>
    <string name="build_it_bigger">Build it bigger</string>
    <string name="app_material">Make your app material</string>
    <string name="go_ubiquitous">Go Ubiquitous</string>
    <string name="capstone">Capstone</string>
    <string name="intro">Here are my NanoDegree Apps!</string>
    <string name="button_launch">This button will launch\t</string>
    <string name="app">\tapp</string>


</resources>
