<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.projects.nanodegree.myappportfolio.PortfolioActivity">


    <TextView
        android:id="@+id/tv_intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/intro"
        android:textSize="20sp"
        android:textColor="@color/colorPrimaryDark"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/btn_app_one"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/popular_movies"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_app_two"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/stock_hawk"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_app_three"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/build_it_bigger"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_app_four"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/go_ubiquitous"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"/>

    <Button
        android:id="@+id/btn_app_five"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/capstone"
        android:textColor="@color/color_white"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:background="@color/colorPrimary"/>
</LinearLayout>
